syntax = "proto3";

package engula.compaction;

import "format/format.proto";

service Compaction {
  rpc Compact(CompactionInput) returns (CompactionOutput) {}
}

message CompactionInput {
  repeated engula.format.TableDesc tables = 1;
  uint64 input_size = 2;
  uint64 output_table_number = 3;
}

message CompactionOutput {
  repeated engula.format.TableDesc tables = 1;
  engula.format.TableDesc output_table = 2;
}
