syntax = "proto3";
package engula.job;
import "format/format.proto";

service Job {
  rpc Compact(CompactRequest) returns (CompactResponse) {}
}

message CompactRequest {
    repeated format.FileDesc files = 1;
    uint64 output_file_number = 2;
}

message CompactResponse {
  repeated format.FileDesc files = 1;
  format.FileDesc file = 2;
}
